# HermesMerry

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.in
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
configs/: ac_profiles.example.json  accelerator_watchlist.txt  agent_work_queue.discovery.json  hermes-production-profile.json  portfolio_watchlist.txt  runpod.env.example  scoring_weights.json  source_channels.example.json
docs/: ONBOARDING.md  SAFETY.md
scripts/: build_ghcr_staging.sh  firestore_readonly_audit.py  reply_slack_project_decision.py  runpod_cost_audit.sh  runpod_entrypoint.sh  save_anthropic_key.sh  save_runpod_key.sh  save_thevc_credentials.sh  slack_qa_realtime_agent.py  with_local_env.sh
tests/: conftest.py  test_ac_profile_parser.py  test_adapter_contracts.py  test_adapter_interfaces.py  test_agent_loop.py  test_agent_work_queue.py  test_anthropic_adapter.py  test_apps_script_gateway.py  test_batch_import.py  test_bigquery_merge.py  test_bigquery_schema.py  test_calibration.py  test_entity_resolution.py  test_fake_adapters.py  test_firestore_readonly_audit.py  test_github_qa_issue.py  test_hermes_profile.py  test_hermes_qa_delegation.py  test_infra_terraform.py  test_job_runner.py  test_jobs_cli.py  test_kvic_ingestion.py  test_local_file_object_store.py  test_loop_dashboard.py  test_mcp_registry.py  test_mcp_runtime_handlers.py  test_mcp_server.py  test_ontology.py  test_pii.py  test_platum_crawler.py  test_portfolio_watchlist.py  test_probabilistic_resolution.py  test_regional_priority.py  (+19 more)
(+121 files in other folders)
