[project]
name = "hermes-merry-ac-discovery"
version = "0.1.0"
description = "Hermes x Merry autonomous AC discovery runtime"
requires-python = ">=3.12"
dependencies = [
  "google-api-python-client==2.140.0",
  "google-cloud-bigquery==3.25.0",
  "google-cloud-storage==2.18.0",
  "playwright==1.60.0",
  "slack-sdk==3.33.0",
]

[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
